--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
             </div>
-            <a href="#" class="btn">Discover</a>
+            <a href="#about" class="btn">Discover</a>
         </div>
 
         <div class="home-img">
@@ -66,7 +66,7 @@
             <h2 class="heading">About WiFiSecureX</h2>
             <h3>Powering Wireless Security with Raspberry Pi</h3>
             <p>WiFiSecureX is a cutting-edge wireless security auditing tool, designed to enhance the security of wireless networks by leveraging the compact and powerful Raspberry Pi. Our tool provides comprehensive security assessments, detecting vulnerabilities and ensuring compliance with industry standards like HIPAA and PCI DSS.</p>
-            <a href="#" class="btn">Read More</a>
+            <a href="#download" class="btn">Read More</a>
         </div>
     </section>
 
