--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <li>Free subscription for first 3 months</li>
                     <li>7 Day moneyback guarantee</li>
                 </ul>
-                <a href="#" class="btn">Order Now</a>
+                <a href="purchase.html?product=WiFind Device&price=200" class="btn">Order Now</a>
             </div>
     
             <div class="pricing-box">
@@ -119,7 +119,7 @@
                     <li>Patch updates</li>
                     <li>Full technical support</li>
                 </ul>
-                <a href="#" class="btn">Buy Now</a>
+                <a href="purchase.html?product=Monthly License&price=9" class="btn">Buy Now</a>
             </div>
     
             <div class="pricing-box">
@@ -130,7 +130,7 @@
                     <li>Patch updates</li>
                     <li>Full technical support</li>
                 </ul>
-                <a href="#" class="btn">Buy Now</a>
+                <a href="purchase.html?product=Annual License&price=89" class="btn">Buy Now</a>
             </div>
         </div>
     </section>
